# azimut

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: KEYED_PROVIDERS.md  ONTOLOGY.md  SPEC.md
extension/: README.md  background.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: CaseSidebar.svelte  Icon.svelte  Logo.svelte  PostTemplateEditor.svelte  ProofPreview.svelte  ProofTemplateEditor.svelte
frontend/src/lib/: api.js  bidi.js  bidi.test.js  composer.js  composer.test.js  extension.test.js  gridSearch.js  gridSearch.test.js  inspectModules.js  maplinks.js  mediaFilter.js  mediaFilter.test.js  post.js  post.test.js  state.svelte.js  state.test.js  usage.js  usage.test.js
frontend/src/tools/: Inspector.svelte  MediaLibrary.svelte  PostComposer.svelte  ProofComposer.svelte  ProofComposer.test.js  Satellite.svelte  (+1 more)
packaging/: azimut.spec  entry.py
scripts/: relaunch.sh
src/azimut/: __init__.py  cli.py  config.py  jobs.py  launcher.py  server.py  workspace.py
src/ozimut/: jobs.py  server.py  workspace.py
tests/: conftest.py  test_cases_api.py  test_config.py  test_coords.py  test_drafts_api.py  test_events_api.py  test_google_tiles.py  test_hardening.py  test_ingest_api.py  test_inspect_api.py  test_jobs.py  test_launcher.py  test_links_api.py  test_media_api.py  test_proofs_api.py  test_satellite_api.py  test_server_guard.py  test_settings_api.py  test_settings_backup.py  test_templates_api.py  test_thumbnails.py  test_tiles.py
(+31 files in other folders)
