[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azimut"
version = "0.1.0"
description = "The OSINT investigator's workbench — local-first media, geolocation proofs and case management."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "OsintMeThat" }]
keywords = ["osint", "geoint", "geolocation", "investigation", "verification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
    "pillow>=10.3",
    "yt-dlp>=2024.4.9",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
azimut = "azimut.cli:main"

[project.urls]
Homepage = "https://github.com/OsintMeThat/azimut"

[tool.hatch.build.targets.wheel]
packages = ["src/azimut"]
# The frontend builds into src/azimut/static (git-ignored); force it into the
# wheel so `pip install azimut` ships a working UI. Run `npm run build` first.
artifacts = ["src/azimut/static/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
